# FinKnowledgeAssistant

./: .gitignore  README.md
cpp_backend_skeleton/: CMakeLists.txt  README.md
cpp_backend_skeleton/src/: main.cpp
cpp_backend_skeleton/src/auth/: AuthMiddleware.cpp  AuthMiddleware.h  MockTokenProvider.cpp  MockTokenProvider.h  TokenProvider.h
cpp_backend_skeleton/src/common/: ApiResponse.h  Logger.h
cpp_backend_skeleton/src/controllers/: AuthController.cpp  AuthController.h  HealthController.cpp  HealthController.h  QaController.cpp  QaController.h  SystemController.cpp  SystemController.h
cpp_backend_skeleton/src/core/: AppContext.cpp  AppContext.h  RouteRegistrar.cpp  RouteRegistrar.h
cpp_backend_skeleton/src/models/: SystemConfig.h  UserModels.h
cpp_backend_skeleton/src/services/: PythonRagClient.cpp  PythonRagClient.h  QaService.cpp  QaService.h
python_rag_service/: main.py
